--- a/app/design/frontend/gs-default/default/layout/customer.xml
+++ b/app/design/frontend/gs-default/default/layout/customer.xml
@@ -111,4 +111,16 @@
         </reference>
     </customer_address_form> 
 	
+    <customer_logged_in>
+        <reference name="top.links">
+            <action method="addLink" translate="label title" module="customer"><label>Log Out</label><url helper="customer/getLogoutUrl"/><title>Log Out</title><prepare/><urlParams/><position>100</position></action>
+        </reference>
+    </customer_logged_in>
+	
+	 <customer_logged_out> 
+        <reference name="top.links">
+            <action method="addLink" translate="label title" module="customer"><label>Log In</label><url helper="customer/getLoginUrl"/><title>Log In</title><prepare/><urlParams/><position>100</position></action>
+        </reference>
+        <remove name="reorder"></remove>
+    </customer_logged_out>
 </layout>
