--- a/app/design/frontend/gs-default/default/template/customer/form/login.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/login.phtml
@@ -1,58 +1,32 @@
- <div class="account-login">
-    <div class="page-title">
-        <h1><?php echo $this->__('Login or Create an Account') ?></h1>
-    </div>
-    <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-    <?php /* Extensions placeholder */ ?>
-    <?php echo $this->getChildHtml('customer.form.login.extra')?>
-    <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
-        <div class="col2-set">
-            <div class="col-1 new-users">
-                <div class="content">
-                    <h2><?php echo $this->__('New Customers') ?></h2>
-                    <p><?php echo $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
-                </div>
-            </div>
-            <div class="col-2 registered-users">
-                <div class="content">
-                    <h2><?php echo $this->__('Registered Customers') ?></h2>
-                    <p><?php echo $this->__('If you have an account with us, please log in.') ?></p>
-                    <ul class="form-list">
-                        <li>
-                            <label for="email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
-                            <div class="input-box">
-                                <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
-                            </div>
-                        </li>
-                        <li>
-                            <label for="pass" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
-                            <div class="input-box">
-                                <input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
-                            </div>
-                        </li>
-                        <?php echo $this->getChildHtml('form.additional.info'); ?>
-                    </ul>
-                    <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-                </div>
-            </div>
-        </div>
-        <div class="col2-set">
-            <div class="col-1 new-users">
-                <div class="buttons-set">
-                    <button type="button" title="<?php echo $this->__('Create an Account') ?>" class="button" onclick="window.location='<?php echo $this->getCreateAccountUrl() ?>';"><span><span><?php echo $this->__('Create an Account') ?></span></span></button>
-                </div>
-            </div>
-            <div class="col-2 registered-users">
-                <div class="buttons-set">
-                    <a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a>
-                    <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
-                </div>
-            </div>
-        </div>
-    </form>
-    <script type="text/javascript">
-    //<![CDATA[
-        var dataForm = new VarienForm('login-form', true);
-    //]]>
-    </script>
-</div>
+<div class="account_content fleft">
+          <div class="head_result"><?php echo $this->__('MY ACCOUNT SIGN IN') ?></div>
+          <div class="sign_in">
+			<form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
+              <table width="410" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td><label> Email*:<span>* Required fields</span> </label> 
+					<input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
+					</td>
+                </tr>
+                <tr>
+                  <td><label><?php echo $this->__('Password*:') ?></label>
+                     <input style="" type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="#" class="forgot_pword"><?php echo $this->__('Forgotten your password') ?></a></td>
+                </tr>
+                <tr>
+                  <td><div class="rad_8 btn_block">
+                      <button><span><?php echo $this->__('Sign In') ?></span></button>
+                    </div></td>
+                </tr>
+              </table>
+            </form>
+          </div>
+	<script type="text/javascript">
+		//<![CDATA[
+		var dataForm = new VarienForm('login-form', true);
+		//]]>
+	</script>
+ </div> 
