--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
@@ -1,3 +1,166 @@
+<input type="hidden" name="billing[address_id]" value="<?php echo $this->getBillingAddress()->getId() ?>" id="billing:address_id" />
+
+<?php if (!$this->isCustomerLoggedIn() && !$this->customerHasAddresses()):?>
+<input type="hidden" name="billing[use_for_shipping]" id="billing:use_for_shipping" value="1" />
+<?php endif; ?>
+
+
+<table width="100%" cellspacing="0" cellpadding="0" border="0" id="billing-new-address-form" <?php if ($this->customerHasAddresses()): ?> style="display:none;"<?php endif; ?>>
+<tbody>
+	<tr valign="top">
+		<td>
+			<div class="fleft">				
+				<label for="billing:firstname"><?php echo $this->__('First Name') ?>*</label>
+				<input type="text" id="billing:firstname" name="billing[firstname]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getFirstname()) ?>" title="<?php echo $this->__('First Name') ?>" class="required-entry" />
+			</div>
+			<div class="fright">
+				<label for="billing:lastname"><?php echo $this->__('Last Name') ?>*</label>
+				<input type="text" id="billing:lastname" name="billing[lastname]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getLastname()) ?>" title="<?php echo $this->__('Last Name') ?>" class="required-entry" />
+			</div>
+		</td>
+	</tr>
+	
+	<?php if(!$this->isCustomerLoggedIn()): ?>
+	<tr valign="top">
+		<td>
+			<div class="fleft">		
+				<label for="billing:email"><?php echo $this->__('Email Address') ?>*</label>
+				<input type="text" name="billing[email]" id="billing:email" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="validate-email required-entry"  />
+				<span id="valid_email_address_image" style="display:none;"><img src="<?php echo $this->getSkinUrl('images/onestepcheckout/valid.gif')?>" title="<?php echo $this->__('Valid Email Address');?>" alt="<?php echo $this->__('Valid Email Address');?>" width="18"/></span>
+				<div id="email-error-message" class="error-message"></div>
+			</div>
+			<div class="fright">				
+				<?php if($this->configData['show_telephone']): ?>
+					<label for="billing:telephone"><?php echo $this->__('Telephone') ?> *</label>
+					<input type="text" name="billing[telephone]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="required-entry" id="billing:telephone" />
+				<?php endif; ?>
+			</div>
+		</td>
+	</tr>
+	<?php endif;?>
+	
+	
+	<?php if($this->configData['show_company']): ?>
+	<tr valign="top">
+		<td>
+			<div class="fleft">	
+				<label for="billing:company"><?php echo $this->__('Company') ?></label>
+				<input type="text" id="billing:company" name="billing[company]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getCompany()) ?>" title="<?php echo $this->__('Company') ?>" />
+			</div>
+		</td>
+	</tr>
+	<?php endif; ?>
+	
+	
+	<tr valign="top">
+		<td>			
+			<label for="billing:street1"><?php echo $this->__('Address') ?> *</label>
+			<input type="text" style="margin:0px 0px 8px 0px;" title="<?php echo $this->__('Street Address') ?>" name="billing[street][]" id="billing:street1" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getStreet(1)) ?>" class="required-entry"/>
+			<?php for ($_i=2, $_n=$this->helper('customer/address')->getStreetLines(); $_i<=$_n; $_i++): ?>
+				<input type="text" title="<?php echo $this->__('Street Address '.$_i) ?>" name="billing[street][]" id="billing:street<?php echo $_i?>" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getStreet($_i)) ?>" />
+			<?php endfor ?>
+		</td>
+	</tr>
+	
+	<?php if ($this->configData['show_city']):?>
+	<tr valign="top">
+		<td>
+			<label for="billing:city"><?php echo $this->__('City') ?> *</label>
+			<input type="text" title="<?php echo $this->__('City') ?>" name="billing[city]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getCity()) ?>" class="required-entry input-text" id="billing:city" />
+		</td>
+	</tr>
+	<?php endif;?>
+	
+	
+	<?php if($this->configData['show_fax']): ?>
+	<tr valign="top">
+		<td>
+			<label for="billing:fax"><?php echo $this->__('Fax') ?></label>
+			<input type="text" name="billing[fax]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getFax()) ?>" title="<?php echo $this->__('Fax') ?>" id="billing:fax" />
+		</td>
+	</tr>
+	<?php endif; ?>
+	
+	
+	<tr valign="top">
+		<td>
+			<div class="fleft">
+				<?php if ($this->configData['show_zipcode']):?>
+					<label for="billing:postcode"><?php echo $this->__('Postcode') ?> *</label>
+					<input type="text" title="<?php echo $this->__('Zip/Postal Code') ?>" name="billing[postcode]" id="billing:postcode" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getPostcode()) ?>" class="validate-zip-international required-entry"/>
+				<?php endif; ?>
+			</div>
+			<div class="fright">
+				<label for="billing:country_id"><?php echo $this->__('Country') ?>*</label>
+				<?php echo $this->getCountryHtmlSelect('billing') ?>
+			</div>
+		</td>
+	</tr>
+	
+	
+	<?php if ($this->configData['show_region']):?>	
+	<tr valign="top">
+		<td>			
+			<label for="billing:region"><?php echo $this->__('State/Province') ?>*</label>
+			<select id="billing:region_id" name="billing[region_id]" title="<?php echo $this->__('State/Province') ?>" class="validate-select" style="display:none;width:277px;" >
+				<option value=""><?php echo $this->__('Please select region, state or province') ?></option>
+			</select>
+			<script type="text/javascript">
+					$('billing:region_id').setAttribute('defaultValue',  "<?php echo $this->htmlEscape($this->getBillingAddress()->getRegionId()) ?>");
+			</script>
+			<input type="text" id="billing:region" name="billing[region]" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getRegion()) ?>"  title="<?php echo $this->__('State/Province') ?>" style="display:none" />				
+		</td>
+	</tr>
+	<?php endif?>	
+	
+	
+	<?php if (!$this->isCustomerLoggedIn() && Mage::helper('onestepcheckout')->enableRegistration() && Mage::helper('onestepcheckout')->allowGuestCheckout()):?>
+	<tr valign="top">
+		<td>
+			<input id="create_account_checkbox_id" type="checkbox" name="create_account_checkbox" value="1" />
+			<label for="create_account_checkbox_id"><?php echo $this->__('Create account') ?></label>
+			<script type="text/javascript">
+				Event.observe('create_account_checkbox_id', 'click', function() {
+					if ($('create_account_checkbox_id').checked) 
+						$('password_section_id').show();
+					else 
+						$('password_section_id').hide();
+				});
+			</script>
+		</td>
+	</tr>
+	
+	<?php endif;?>
+	
+	
+	<?php if (!$this->isCustomerLoggedIn() && (Mage::helper('onestepcheckout')->enableRegistration() || !Mage::helper('onestepcheckout')->allowGuestCheckout())):?>	
+	<tr valign="top" id="password_section_id" <?php if (!Mage::helper('onestepcheckout')->allowGuestCheckout()):?>style="display:block"<?php else:?>style="display:none"<?php endif?>>
+		<td>
+			<div class="fleft">
+				<label for="billing:customer_password"><?php echo $this->__('Password') ?> *</label>
+				<input type="password" name="billing[customer_password]" id="billing:customer_password" title="<?php echo $this->__('Password') ?>" class="required-entry validate-password" />
+			</div>
+			<div class="fright">
+				<label for="billing:confirm_password"><?php echo $this->__('Confirm Password') ?> *</label>
+				<input type="password" name="billing[confirm_password]" title="<?php echo $this->__('Confirm Password') ?>" id="billing:confirm_password" class="required-entry validate-cpassword" />
+			</div>
+		</td>
+	</tr>		
+	<?php endif?>			
+	
+	<?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
+	<tr valign="top">
+		<td>
+			<label for="billing:save_in_address_book"><?php echo $this->__('Save in address book') ?></label>
+			<input type="checkbox" name="billing[save_in_address_book]" value="1" title="<?php echo $this->__('Save in address book') ?>" id="billing:save_in_address_book" onchange="if(window.shipping) shipping.setSameAsBilling(false);"<?php if ($this->getBillingAddress()->getSaveInAddressBook()):?> checked="checked"<?php endif;?> class="checkbox" />
+		</td>
+	</tr>
+	<?php endif;?>	
+	
+</tbody>
+</table>
+
+<?php /* ?>
 <h3 id="billing_step_header" class="step_1"><?php echo($this->__("BILLING ADDRESS")); ?></h3>
 <?php if ($this->customerHasAddresses()): ?>
 	<p><?php echo $this->__('Select a billing address from your address book or enter a new address.') ?></p>
@@ -37,6 +200,8 @@
 			</div>
 			<?php endif; ?>
 		</li>
+		
+		
 		<li class="wide">
 			<label for="billing:street1"><?php echo $this->__('Address') ?> <span class="required">*</span></label><br />
 			<input type="text" title="<?php echo $this->__('Street Address') ?>" name="billing[street][]" id="billing:street1" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getStreet(1)) ?>" class="required-entry input-text"/>
@@ -91,6 +256,7 @@
 			</div>
 			<?php endif; ?>
 		</li>
+		
 		<?php if (!$this->isCustomerLoggedIn() && Mage::helper('onestepcheckout')->enableRegistration() && Mage::helper('onestepcheckout')->allowGuestCheckout()):?>
 		<li>
 			<div class="input-box">
@@ -131,6 +297,8 @@
 		</li>
 	</ul>
 </fieldset>
+<?php */ ?>
+
 <script type="text/javascript">var countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <script type="text/javascript">
 //<![CDATA[
@@ -156,8 +324,6 @@
 			var isNew = $('billing-address-select').value ? false : true;
 			setNewAddress(isNew, 'billing', save_address_url);
 		});
-	}
-	
-	//$('billing-address-select') && setNewAddress(!$('billing-address-select').value, 'billing', '');
+	}	
 //]]>
 </script>
