--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/totals.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/totals.phtml
@@ -31,10 +31,10 @@
     <?php echo $this->renderTotals('footer', $_colspan); ?>
     <?php if ($this->needDisplayBaseGrandtotal()):?>
     <tr>
-        <td class="a-right" colspan="<?php echo $_colspan; ?>">
+        <td class="a-right" colspan="<?php echo $_colspan; ?>">sadasdasd
             <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
         </td>
-        <td class="a-right">
+        <td class="a-right">dddddddd
             <small><?php echo $this->displayBaseGrandtotal() ?></small>
         </td>
     </tr>
