--- a/app/design/frontend/gs-default/default/layout/onestepcheckout.xml
+++ b/app/design/frontend/gs-default/default/layout/onestepcheckout.xml
@@ -7,8 +7,11 @@
 		<reference name="head">
 			<action method="addJs"><script>magestore/onestepcheckout.js</script></action>
 			<action method="addJs"><script>magestore/tinybox.js</script></action>
+			<action method="addJs"><script>jquery/jquery-1.7.2.min.js</script></action>
+			<action method="addJs"><script>jquery/jquery.blockUI.js</script></action>
+			<action method="addJs"><script>jquery/no-conflict.js</script></action>
 			<action method="addCss"><stylesheet>css/magestore/onestepcheckout.css</stylesheet></action>
-			<action method="addCss"><stylesheet>css/magestore/tinybox.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/magestore/tinybox.css</stylesheet></action>			
 		</reference>
 		<reference name="content">
 			<block type="onestepcheckout/onestepcheckout" name="onestepcheckout" template="onestepcheckout/onestepcheckout.phtml">
