--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/totals.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/totals.phtml
@@ -25,19 +25,30 @@
  */
 ?>
 <?php if ($this->getTotals()): ?>
+
+<?php echo $this->renderTotals('footer'); ?>
+<?php echo $this->renderSubTotal('subtotal'); ?>
+<?php echo $this->renderDiscountTotal('shipping'); ?>
+<?php echo $this->renderGrandTotal('grand'); ?>
+<?php echo $this->renderTotals(); ?>
+<?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
+
+
+<?php /* ?>
 <tfoot>
     <?php $_colspan = $this->helper('tax')->displayCartBothPrices() ? 5 : 3; ?>
     <?php echo $this->renderTotals(null, $_colspan); ?>
     <?php echo $this->renderTotals('footer', $_colspan); ?>
     <?php if ($this->needDisplayBaseGrandtotal()):?>
     <tr>
-        <td class="a-right" colspan="<?php echo $_colspan; ?>">sadasdasd
+        <td class="a-right" colspan="<?php echo $_colspan; ?>">
             <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
         </td>
-        <td class="a-right">dddddddd
+        <td class="a-right">
             <small><?php echo $this->displayBaseGrandtotal() ?></small>
         </td>
     </tr>
     <?php endif?>
 </tfoot>
+<?php */ ?>
 <?php endif; ?>
