--- a/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
@@ -22,7 +22,10 @@
 			<table width="100%" cellspacing="0" cellpadding="0" border="0" class="tbl_quality">
 				<tbody>
 				<tr>
-					<td colspan="2">
+                    <td width="55">
+                        <strong><?php echo $this->__('Price:') ?></strong>
+                    </td>
+					<td>
 						<?php echo $this->getPriceHtml($_product) ?>
 					</td>
 				</tr>
