- added item for productExt.js

--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -90,6 +90,8 @@
 			<action method="addItem"><type>skin_css</type><name>css/jquery/jquery-ui-1.8.21.custom.css</name></action>
 			<action method="addJs"><script>jquery/jquery-1.7.1.min.js</script></action>
 			<action method="addJs"><script>jquery/jquery-ui-1.8.21.custom.min.js</script></action>
+            // add our extended product.js
+            <action method="addItem"><type>skin_js</type><name>js/productExt.js</name></action>
 		</reference>
         
         <reference name="product.info.options.wrapper.bottom">
