validation error text color

--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1770,6 +1770,10 @@ select.error_field{
 	border:1px solid #EF132D;
 }
 
+.validation-advice {
+	color: #79A341;
+}
+
 /*------------------------body begin------------------------*/
 /*------------------------body  ends------------------------*/
 /*------------------------footer begin------------------------*/
