--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/info.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/review/info.phtml
@@ -38,9 +38,12 @@
 	<?php foreach($this->getItems() as $_item): ?>
 		<?php echo $this->getItemHtml($_item)?>
 	<?php endforeach ?>	
+	
+	<?php echo $this->getChildHtml('totals'); ?>
+	
 	</tbody>
 </table>
-<?php echo $this->getChildHtml('totals'); ?>
+<?php echo $this->getChildHtml('grand.totals'); ?>
 
 
 <?php /* ?>
