--- a/app/design/frontend/gs-default/default/template/customer/form/register.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/register.phtml
@@ -2,6 +2,7 @@
 div.myaccount-errors *{ color:#77A33F; } 
 div.myaccount-errors{ position:relative; color:#77A33F; } 
 div.myaccount-errors ul.messages li.error-msg ul{ border:none; #77A33F}  
+div.btn_block button{ cursor:pointer;}   
 </style>
   <div class="account_content fright">
           <div class="head_result"><?php echo $this->__('CREATE AN ACCOUNT');?></div>
