--- a/app/design/frontend/gs-default/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/gs-default/default/template/persistent/customer/form/login.phtml
@@ -1,5 +1,17 @@
+<style type="text/css">
+div.login-errors *{ color:#77A33F; } 
+div.login-errors{ position:relative; color:#77A33F; margin-bottm:20px;} 
+div.login-errors ul.messages{margin:0px 0px 8px 10px;border-bottom:1px solid #CCCCCC;padding:5px 5px 10px 0px;}
+div.login-errors ul.messages li.error-msg ul{ border:none; #77A33F;}   
+div.login-errors ul.messages li.error-msg ul li span{ position:relative !important;}   
+div.btn_block button{ cursor:pointer;}   
+</style>
 <div class="account_content fleft">
-          <div class="head_result"><?php echo $this->__('MY ACCOUNT SIGN IN') ?></div>
+          <div class="head_result"><?php echo $this->__('MY ACCOUNT SIGN IN') ?></div> 
+		 <div class="login-errors">
+			<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+			<?php $this->getMessagesBlock()->getMessageCollection()->clear(); ?>
+	     </div>
           <div class="sign_in">
 			<form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
               <table width="410" border="0" cellspacing="0" cellpadding="0">
