--- a/app/design/frontend/gs-default/default/template/sales/order/history.phtml
+++ b/app/design/frontend/gs-default/default/template/sales/order/history.phtml
@@ -1,9 +1,89 @@
+<style type="text/css">
+.acctn_personal .limiter select{
+	width:auto;
+    padding: 0px;
+} 
+.pager {
+    background: url("<?php echo $this->getSkinUrl();?>images/bkg_toolbar.gif") repeat-x scroll 0 100% #FFFFFF;
+    border-top: 1px solid #E2E2E2;
+    font-size: 11px;
+    padding: 4px 8px;
+    text-align: center;
+}
+.page:after{
+	clear: both;
+    content: ".";
+    display: block;
+    font-size: 0;
+    height: 0;
+    line-height: 0;
+    overflow: hidden;
+}
+.pager .amount {
+    float: left;
+    margin: 0;
+}
+.pager .limiter {
+    float: right;
+}
+.pager .limiter label {
+    vertical-align: middle;
+}
+.data-table {
+    border: 1px solid #BEBCB7;
+    width: 100%;
+}
+.clearer:after, .header-container:after, .header-container .top-container:after, .header:after, .header .quick-access:after, #nav:after, .main:after, .footer:after, .footer-container .bottom-container:after, .col-main:after, .col2-set:after, .col3-set:after, .col3-layout .product-options-bottom .price-box:after, .col4-set:after, .search-autocomplete li:after, .block .block-content:after, .block .actions:after, .block li.item:after, .block-poll li:after, .block-layered-nav .currently li:after, .page-title:after, .products-grid:after, .products-list li.item:after, .box-account .box-head:after, .dashboard .box .box-title:after, .box-reviews li.item:after, .box-tags li.item:after, .pager:after, .sorter:after, .ratings:after, .add-to-box:after, .add-to-cart:after, .product-essential:after, .product-collateral:after, .product-view .product-img-box .more-views ul:after, .product-view .box-tags .form-add:after, .product-view .product-shop .short-description:after, .product-view .box-description:after, .product-options .options-list li:after, .product-options-bottom:after, .product-review:after, .cart:after, .cart-collaterals:after, .cart .crosssell li.item:after, .opc .step-title:after, .checkout-progress:after, .multiple-checkout .place-order:after, .group-select li:after, .form-list li:after, .form-list .field:after, .buttons-set:after, .page-print .print-head:after, .advanced-search-summary:after, .gift-messages-form .item:after, .send-friend .form-list li p:after{
+	clear: both;
+    content: ".";
+    display: block;
+    font-size: 0;
+    height: 0;
+    line-height: 0;
+    overflow: hidden;
+}
+.acctn_personal .limiter label{
+	display:inline;
+}
+.acctn_personal span{
+	position:relative;ss
+}
+.data-table thead th {
+    background: url("<?php echo $this->getSkinUrl();?>images/bkg_th.gif") repeat-x scroll 0 100% #D9E5EE;
+}
+.data-table thead th {
+    border-right: 1px solid #C2D3E0;
+    color: #0A263C;
+    font-weight: bold;
+    padding: 2px 8px;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+.data-table tr.last th, .data-table tr.last td {
+    border-bottom: 0 none !important;
+}
+.data-table tbody th, .data-table tbody td {
+    border-bottom: 1px solid #D9DDE3;
+    border-right: 1px solid #D9DDE3;
+}
+.data-table td {
+    padding: 3px 8px;
+}
+caption, th, td {
+    font-weight: normal;
+    text-align: left;
+    vertical-align: top;
+}
+.nobr {
+    white-space: nowrap !important;
+}
+</style>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <?php $_orders = $this->getOrders(); ?>
 <div class="head_result"> <?php echo $this->__('My Orders') ?></div> 
 <div class="acctn_personal">
 <?php echo $this->getPagerHtml(); ?>
-<?php if($_orders->getSize()): ?>
+<?php if($_orders->getSize()): ?> 
 <table class="data-table" id="my-orders-table">
     <col width="1" />
     <col width="1" />
