--- a/app/design/frontend/gs-default/default/template/wishlist/sharing.phtml
+++ b/app/design/frontend/gs-default/default/template/wishlist/sharing.phtml
@@ -1,40 +1,36 @@
- 
-<div class="page-title">
-    <h1><?php echo $this->__('Share Your Wishlist') ?></h1>
-</div>
+<div class="head_result"> <?php echo $this->__('Share Your Wishlist') ?></div> 
+<div class="acctn_personal">
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <form action="<?php echo $this->getSendUrl() ?>" id="form-validate" method="post">
-    <div class="fieldset">
-        <?php echo $this->getBlockHtml('formkey')?>
-        <h2 class="legend"><?php echo $this->__('Sharing Information') ?></h2>
-        <ul class="form-list">
-            <li class="wide">
-                <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email addresses, separated by commas') ?></label>
-                <div class="input-box">
-                    <textarea name="emails" cols="60" rows="5" id="email_address" class="validate-emails required-entry"><?php echo $this->getEnteredData('emails') ?></textarea>
-                </div>
-            </li>
-            <li class="wide">
-                <label for="message"><?php echo $this->__('Message') ?></label>
-                <div class="input-box">
-                    <textarea id="message" name="message" cols="60" rows="5"><?php echo $this->getEnteredData('message') ?></textarea>
-                </div>
-            </li>
-            <?php if($this->helper('wishlist')->isRssAllow()): ?>
-            <li class="control">
-                <div class="input-box">
-                    <input type="checkbox" name="rss_url" id="rss_url" value="1" title="<?php echo $this->__('Check this checkbox if you want to add a link to an rss feed to your wishlist.') ?>" class="checkbox" />
-                </div>
-                <label for="rss_url"><?php echo $this->__('Check this checkbox if you want to add a link to an rss feed to your wishlist.') ?></label>
-            </li>
-            <?php endif; ?>
-        </ul>
-    </div>
-    <div class="buttons-set form-buttons">
-        <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-        <p class="back-link"><a href="<?php echo $this->getBackUrl(); ?>"><small>&laquo; </small><?php echo $this->__('Back')?></a></p>
-        <button type="submit" title="<?php echo $this->__('Share Wishlist') ?>" class="button"><span><span><?php echo $this->__('Share Wishlist') ?></span></span></button>
-    </div>
+<?php echo $this->getBlockHtml('formkey')?> 
+ <table width="100%" border="0" cellspacing="0" cellpadding="0">  
+	<tr>
+		<td>
+			 <label for="email_address" class="required"><?php echo $this->__('Email addresses, separated by commas') ?><em>*</em></label>
+			 <textarea name="emails" cols="60" rows="5" id="email_address" class="validate-emails required-entry"><?php echo $this->getEnteredData('emails') ?></textarea>
+               
+		</td>
+	 </tr>
+	 <tr>
+		<td>
+			<label for="message"><?php echo $this->__('Message') ?></label>
+			<textarea id="message" name="message" cols="60" rows="5"><?php echo $this->getEnteredData('message') ?></textarea>
+               
+		</td>
+	 </tr>
+	<?php if($this->helper('wishlist')->isRssAllow()): ?>
+	<tr>
+		<td>
+			<input type="checkbox" name="rss_url" id="rss_url" value="1" title="<?php echo $this->__('Check this checkbox if you want to add a link to an rss feed to your wishlist.') ?>" class="checkbox" />
+			<label for="rss_url"><?php echo $this->__('Check this checkbox if you want to add a link to an rss feed to your wishlist.') ?></label>
+
+		</td>
+	</tr>
+	<?php endif; ?>
+</table>
+<div class="rad_8 btn_block">  
+	<button type="submit" title="<?php echo $this->__('Save Wishlist') ?>" class="button"><span><span><?php echo $this->__('Save Wishlist') ?></span></span></button>
+</div>		 
 </form>
 <script type="text/javascript">
 //<![CDATA[
@@ -59,3 +55,4 @@ Validation.addAllThese([
 var dataForm = new VarienForm('form-validate', true);
 //]]>
 </script>
+    </div>
