--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout/billing.phtml
@@ -26,8 +26,9 @@
 			<div class="fleft">		
 				<label for="billing:email"><?php echo $this->__('Email Address') ?>*</label>
 				<input type="text" name="billing[email]" id="billing:email" value="<?php echo $this->htmlEscape($this->getBillingAddress()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="validate-email required-entry"  />
-				<span id="valid_email_address_image" style="display:none;"><img src="<?php echo $this->getSkinUrl('images/onestepcheckout/valid.gif')?>" title="<?php echo $this->__('Valid Email Address');?>" alt="<?php echo $this->__('Valid Email Address');?>" width="18"/></span>
+				
 				<div id="email-error-message" class="error-message"></div>
+				<span id="valid_email_address_image" style="display:none;"><img style="margin:5px 0px 0px 0px;" src="<?php echo $this->getSkinUrl('images/onestepcheckout/valid.gif')?>" title="<?php echo $this->__('Valid Email Address');?>" alt="<?php echo $this->__('Valid Email Address');?>" width="18"/></span>
 			</div>
 			<div class="fright">				
 				<?php if($this->configData['show_telephone']): ?>
